--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
+    "cordova-plugin-camera": "^6.0.0",
+    "cordova-plugin-file": "^7.0.0",
+    "g": "^2.0.1",
     "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +32,8 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/cordova-plugin-camera": "^2.4.0",
+    "@types/cordova-plugin-file": "^4.3.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
